# GraphAssist

./: .gitattributes  .gitignore  README.ja.md  README.md  init.py  manifest.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
.rulesync/metadata/: asset-catalog.jsonc  graphassist.json  runtime-manifest.jsonc
.rulesync/rules/: concepts.md  docs-writing.md  graphassist.md  rule-authoring.md
assets/catalog/: README.md
assets/fonts/: README.md
docs/: README.md
docs/dna-kernel/: README.md
docs/en/: quickstart.md
docs/ja/: quickstart.md
runtime/: README.md
samples/jobs/: README.md  adjust_brighten.json  birds_on_trunk_pipeline.json  demo_analyze_spatial.json  demo_catalog_anchor_center.json  demo_catalog_asset_fleur_outline.json  demo_catalog_asset_fleur_simple.json  demo_catalog_asset_ids.json  demo_catalog_asset_laurel.json  demo_catalog_auto_fetch.json  demo_catalog_minimal.json  demo_catalog_ornament.json  demo_catalog_panel_card.json  demo_catalog_panel_input_asset.json  demo_catalog_pipeline.json  demo_catalog_pipeline_asset_ids.json  demo_zangyo_extend.json  grayscale_sepia.json  lineart_icon_pipeline.json  lineart_repair_loop_validate.json  mosaic_pipeline.json  neon_yoroshiku_medicine_pipeline.json  resize_border.json  temp_align.json  temp_align_webp.json  text_sample.json  title_logo_neon_forge_pipeline.json  to_mosaic_pipeline.json  (+2 more)
scripts/: gen_demo_text_base.py  merge_birds_on_trunk.py  runtime_fetch.py  setup-runtime.ps1  setup-runtime.sh
tests/: font_helper.py  test_assets_cmd.py  test_batch.py  test_catalog_fetch.py  test_catalog_resolve.py  test_convert.py  test_font_outline.py  test_job.py  test_lineart.py  test_metrics.py  test_mosaic.py  test_mosaic_merge.py  test_paths.py  test_phase47.py  test_transform.py  test_user_prefs.py  test_version.py
tools/: README.md
(+141 files in other folders)
