[project]
name = "graphassist"
version = "0.1.0"
description = "Pillow + NumPy based image processing CLI for LLM-assisted workflows"
requires-python = ">=3.11"
dependencies = [
  "pillow>=10.0",
  "numpy>=2.0",
  "pydantic>=2.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.basedpyright]
venvPath = "."
venv = ".venv"
