[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphassist"
version = "0.2.0"
description = "Pillow + NumPy based image processing CLI for LLM-assisted workflows"
requires-python = ">=3.11"
dependencies = [
  "pillow>=10.0",
  "numpy>=2.0",
  "pydantic>=2.0",
]

[project.scripts]
graphassist = "graphassist.graphassist:main"

[dependency-groups]
dev = [
  "pyinstaller>=6.0",
  "resvg-py>=0.3",
]

[project.optional-dependencies]
catalog = [
  "resvg-py>=0.3",
]
font = [
  "fonttools>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/graphassist"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
